# friendli-client

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yaml
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/cli/: installation.mdx  intro.mdx  login.mdx  logout.mdx  passwd.mdx  version.mdx  whoami.mdx
docs/docs/cli/catalog/: _category_.json  list.mdx  view.mdx
docs/docs/cli/checkpoint/: _category_.json  convert.mdx  create.mdx  delete.mdx  download.mdx  import.mdx  list.mdx  restore.mdx  upload.mdx  view.mdx
docs/docs/cli/credential/: _category_.json  delete.mdx  list.mdx  update.mdx
docs/docs/cli/deployment/: _category_.json  create.mdx  event.mdx  list.mdx  log.mdx  metrics.mdx  req-resp.mdx  stop.mdx  update.mdx  usage.mdx  view.mdx
docs/docs/cli/gpu/: _category_.json  list.mdx
docs/docs/cli/key/: _category_.json  create.mdx  delete.mdx  list.mdx
docs/docs/cli/org/: _category_.json  accept-invite.mdx  delete-user.mdx  invite.mdx  members.mdx  set-role.mdx
docs/docs/cli/project/: _category_.json  add-user.mdx  create.mdx  current.mdx  delete-user.mdx  delete.mdx  (+4 more)
docs/docs/home/: intro.mdx
docs/docs/sdk/: installation.mdx  intro.mdx
docs/docs/tutorials/: container.mdx  how_to_use_checkpoint.mdx  intro.mdx
docs/src/css/: custom.css
docs/src/pages/: index.js
examples/: lk99.txt  lk99_questions.txt
friendli/: __init__.py  auth.py  context.py  enums.py  errors.py  formatter.py  logging.py  settings.py
friendli/cli/: __init__.py  catalog.py  checkpoint.py  credential.py  deployment.py  endpoint.py  gpu.py  group.py  key.py  login.py  main.py  model.py  project.py  team.py
friendli/cli/api/: __init__.py  chat_completions.py  completions.py  text_to_image.py
friendli/client/: __init__.py  base.py  catalog.py  checkpoint.py  credential.py  deployment.py  file.py  group.py  login.py  project.py  user.py
friendli/client/graphql/: __init__.py  base.py  deployment.py  endpoint.py  model.py  team.py  user.py
friendli/client/http/: __init__.py  base.py  login.py
friendli/cloud/: __init__.py  storage.py
friendli/configurator/: __init__.py  base.py  credential.py  deployment.py
friendli/di/: __init__.py  injector.py  modules.py
friendli/graphql/: base.py  user.py
friendli/modules/: __init__.py
friendli/modules/converter/: __init__.py  base.py  convert.py  interface.py  maps.py  saver.py  schema.py  utils.py
friendli/modules/quantizer/: __init__.py  base.py  layers.py  maps.py  utils.py
friendli/modules/quantizer_v2/: __init__.py  base.py  enums.py  layers.py  maps.py  quantize.py  utils.py
friendli/schema/: __init__.py
friendli/schema/api/: __init__.py
friendli/schema/config/: __init__.py  deployment.py  endpoint.py
friendli/schema/resource/: __init__.py
friendli/sdk/: __init__.py  client.py  init.py
friendli/sdk/api/: __init__.py  base.py  completions.py
friendli/sdk/resource/: __init__.py  base.py  catalog.py  checkpoint.py  credential.py  deployment.py  endpoint.py  model.py
friendli/utils/: __init__.py  compat.py  decorator.py  format.py  fs.py  maps.py  prompt.py  request.py  testing.py  transfer.py  url.py  validate.py  version.py
periflow/: __init__.py  auth.py  context.py  enums.py  errors.py  formatter.py  logging.py
periflow/cli/: __init__.py  catalog.py  checkpoint.py  credential.py  deployment.py  gpu.py  group.py  key.py  main.py  project.py  vm.py
periflow/client/: __init__.py  base.py  catalog.py  checkpoint.py  credential.py  deployment.py  file.py  group.py  project.py  user.py
periflow/cloud/: __init__.py  storage.py
periflow/configurator/: __init__.py  base.py  credential.py  deployment.py
periflow/converter/: __init__.py  base.py  interface.py  maps.py  utils.py
periflow/converter/models/: blenderbot.py  bloom.py  codegen.py  falcon.py  gpt2.py  gpt_neox.py  gptj.py  llama.py  mpt.py  opt.py  t5.py
periflow/di/: injector.py  modules.py
periflow/modules/: __init__.py
periflow/modules/converter/: base.py  convert.py  interface.py  maps.py  saver.py  schema.py  utils.py
periflow/modules/quantizer/: __init__.py  base.py  configurator.py  formatter.py  layers.py  maps.py  schema.py  utils.py
periflow/schema/: __init__.py
periflow/schema/api/: __init__.py
periflow/schema/resource/: __init__.py
periflow/sdk/: __init__.py  init.py
periflow/sdk/api/: __init__.py  base.py  completion.py  detokenization.py  tokenization.py
periflow/sdk/resource/: __init__.py  base.py  catalog.py  checkpoint.py  credential.py  deployment.py
periflow/utils/: __init__.py  decorator.py  format.py  fs.py  maps.py  prompt.py  request.py  transfer.py  url.py  validate.py  version.py
proto/: chat_completions.proto  completions.proto  response_format.proto  text_to_image.proto
scripts/: autogen_cli_docs.py  autogen_sdk_docs.py  copyright_header.py  fix_imports.py  license_header.py
src/friendli/: __init__.py  const.py
src/friendli/cli/: __init__.py  app.py  const.py  context.py
src/friendli/schema/: __init__.py  _base.py  common_auth.py  common_system.py  common_user.py  dedicated_endpoint.py  file.py
src/friendli/sdk/: __init__.py  exception.py  translator.py
src/friendli/util/: __init__.py  email.py  file_digest.py
tests/e2e/: README.md
tests/e2e/container/: conftest.py  test_chat_completions.py  test_completions.py
tests/e2e/dedicated_endpoints/: conftest.py  test_chat_completions.py  test_completions.py
tests/e2e/serverless_endpoints/: __init__.py  conftest.py  test_chat_completions.py  test_completions.py
tests/unit_tests/: conftest.py  test_formatter.py  test_utils.py
tests/unit_tests/client/: conftest.py  test_base.py  test_catalog.py  test_checkpoint.py  test_credential.py  test_deployment.py  test_file.py  test_group.py  test_project.py  test_user.py
tests/unit_tests/cloud/: test_storage.py
tests/unit_tests/configurator/: test_deployment.py
tests/unit_tests/modules/: conftest.py  test_awq.py  test_converter.py  test_lora_adapter_converter.py  test_smoothquant.py
(+270 files in other folders)
