[tool.poetry]
name = "friendli-client"
version = "1.5.2"
description = "Client of Friendli Suite."
license = "Apache-2.0"
authors = ["FriendliAI teams <eng@friendli.ai>"]
packages = [
    { include = "friendli" },
]
include = ["friendli/py.typed"]
readme = "README.md"
homepage = "https://friendli.ai/"
repository = "https://github.com/friendliai/friendli-client"
documentation = "https://docs.friendli.ai/"
keywords = ["generative-ai", "serving", "llm", "inference", "finetuning"]

[tool.poetry.scripts]
friendli = "friendli.cli:app"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "PyPI"
# priority = "primary"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2"
PyYaml = "^6.0.1"
typer = "^0.9.0"
rich = "^12.2.0"
jsonschema = "^4.17.3"
tqdm = "^4.48.0"
pydantic = {extras = ["email"], version = ">=1.9.0, <3"}
injector = "^0.21.0"
protobuf = "^5.26.1"
types-protobuf = "^5.26.0.20240422"
httpx = "^0.24.1"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
gql = "^3.4.1"
grpcio-tools = "^1.64.1"
grpc-stubs = "^1.53.0.5"
grpcio = "^1.64.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-asyncio = "^0.15.1"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pydocstyle = "^6.3.0"
pylint = "^2.17.4"
toml = "^0.10.2"
types-pyyaml = "^6.0.12.10"
types-jsonschema = "^4.17.0.8"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
types-toml = "^0.10.8.6"
types-tqdm = "^4.65.0.1"
typer = "^0.9.0"

[tool.isort]
profile = "black"
known_local_folder = ["tests"]
append_only = true
add_imports = ["from __future__ import annotations"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pydocstyle]
convention = "google"
inherit = false
ignore-decorators = "overload"
match = "(?!.*_pb2_grpc).py"

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-rf --cov=friendli --cov-report=html --cov-report=xml --cov-config=.coveragerc --junit-xml=test-result.xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@overload"]
skip_covered = true
sort = "Cover"

[tool.pylint."messages control"]
disable = [
    "invalid-name",
    "missing-class-docstring",
    "too-few-public-methods",
    "W0511",
    "E0213",
    "missing-function-docstring",
    "no-self-argument",
    "deprecated-method",
    "unsubscriptable-object",
    "consider-using-set-comprehension",
    "redefined-outer-name"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.check]
ignored-classes = "Depends"
ignore-patterns = [
    ".+_pb2.py",
    ".+_pb2_grpc.py"
]

[tool.pylint.design]
max-args = 7
max-parents = 15

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-signatures = "yes"
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"

[tool.mypy]
exclude = [
    "^.*\\.pyi$",
    "^.*_pb2\\.py$",
    "^.*_pb2_grpc\\.py$"
]
